k8s/environments/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    env: production
    tier: cicd
    app: jenkins
    name: jenkins-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    env: production
    tier: cicd
    app: jenkins
    name: jenkins-pod
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
  labels:
    env: production
    tier: cicd
    app: jenkins
    name: jenkins-jnlp-service
spec:
  ports:
    - port: 50000
      targetPort: 50000
  selector:
    env: production
    tier: cicd
    app: jenkins
    name: jenkins-pod
